syntax = "proto3";

package mempool;
option go_package = "./proto";

message Transaction {
  string hash = 1;
  string from_addr = 2;
  string to_addr = 3;
  string signature = 4;
  int64 amount = 5;
  int64 fee = 6;
  uint64 nonce = 9;
  string data = 10;
  int64 timestamp = 7;
  int64 expires = 8;
}

message CreateMempoolRequest {
  Transaction transaction = 1;
}

message CreateMempoolResponse {
  string hash = 1;
}

message DeleteMempoolRequest {
  string hash = 1;
}

message DeleteMempoolResponse {
  bool success = 1;
}

service MempoolService {
  rpc CreateMempool(CreateMempoolRequest) returns (CreateMempoolResponse) {}
  rpc DeleteMempool(DeleteMempoolRequest) returns (DeleteMempoolResponse) {}
}
